@@ -25,10 +25,10 @@
  */
 
 #if !defined(lint)
-const char libfth_sccsid[] = "@(#)misc.c	1.654 1/30/15";
+const char libfth_sccsid[] = "@(#)misc.c	1.655 2/1/15";
 #endif /* not lint */
 
-#define FTH_DATE		"2015/01/30"
+#define FTH_DATE		"2015/02/01"
 
 #if defined(HAVE_CONFIG_H)
 #include "config.h"
