@@ -1,3 +1,8 @@
+2015-02-01  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* examples/site-lib/clm.fs (notelength): Computation should
+	be done in does-part to honor global variable *clm-tempo*.
+
 2015-01-30  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* examples/site-lib/examp.fs (read-ascii): new-sound args changed.
